version/0.17/_sources/api/solver/_autosummary/settings/naming_option.rst.txt
:orphan:

.. _naming_option:

naming_option
=============

.. autoclass:: ansys.fluent.core.solver.settings_232.naming_option.naming_option
    :show-inheritance:

.. rubric:: Arguments

========================================================   ====================================

Argument                                                                                Summary

========================================================   ====================================
:ref:`option <option_11>`                                                       'option' child.

:ref:`change_all_o2o_si_names <change_all_o2o_si_names>`       'change_all_o2o_si_names' child.

========================================================   ====================================

.. rubric:: Included in:

==================================   ============================

Parent                                                    Summary

==================================   ============================
:ref:`auto_options <auto_options>`       Enter auto-options menu.

==================================   ============================

