version/0.21/_sources/api/solver/_autosummary/settings/naming_option.rst.txt
:orphan:

.. _naming_option:

naming_option
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.naming_option.naming_option
    :show-inheritance:

.. rubric:: Arguments

======================================================================================   ========================================================================

Argument                                                                                                                                                  Summary

======================================================================================   ========================================================================
:ref:`option <option_19>`                                                                                                     (0) basic:           name-prefix:##

:ref:`change_all_one_to_one_interfaces_names <change_all_one_to_one_interfaces_names>`       Apply the new naming option to existing one-to-one mesh interfaces?.

======================================================================================   ========================================================================

.. rubric:: Included in:

==================================   ============================

Parent                                                    Summary

==================================   ============================
:ref:`auto_options <auto_options>`       Enter auto-options menu.

==================================   ============================

